# governance-proofs

./: .gitignore  CITATION.cff  LICENSE  Makefile  PATENTS  README.md  _CoqProject  coq-governance-proofs.opam
.github/workflows/: build.yml
extracted/: CapabilityComposition.ml  CapabilityComposition.mli  Directives.ml  Directives.mli  EffectAlgebra.ml  EffectAlgebra.mli  Governance.mli  InterpreterSpec.ml  InterpreterSpec.mli  TrustSpec.ml  TrustSpec.mli  dune  governance_kernel.ml  governance_stubs.ml  test_kernel.ml
theories/: CapabilityComposition.v  Category.v  CognitiveArchitecture.v  Completeness.v  Convergence.v  CoterminousBoundary.v  Directives.v  EffectAlgebra.v  EffectHandlers.v  ExpressiveMinimality.v  Extraction.v  Functor.v  GoalDirected.v  Governance.v  GovernanceAlgebra.v  GovernedCognitiveCompleteness.v  GovernedMetaprogramming.v  HashChainSpec.v  Interpreter.v  InterpreterSpec.v  LedgerConnection.v  MonoidalCategory.v  NetworkGovernance.v  Oracle.v  Prelude.v  Rice.v  Safety.v  Subsumption.v  TemporalPolicyEvolution.v  TraceSemantics.v  Transparency.v  TrustSpec.v
